api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: synergychat-api  # Этот селектор должен соответствовать label pods
  ports:
    - protocol: TCP
      port: 80           # Порт сервиса
      targetPort: 8080  # Порт на подах
