crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler  # Этот селектор должен соответствовать label pods
  ports:
    - protocol: TCP
      port: 80           # Порт сервиса
      targetPort: 8080   # Порт на подах
