web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: synergychat-web  # Этот селектор должен соответствовать label pods
  ports:
    - protocol: TCP
      port: 80           # Порт сервиса
      targetPort: 8080   # Порт на подах
