app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Перенаправление URL
spec:
  rules:
  # Правило для веб-интерфейса
  - host: synchat.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port: 
              number: 80
  
  # Правило для API
  - host: synchatapi.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port: 
              number: 80
